<resources>
    <string name="app_name">WhatsUp</string>
    <string name="splash_text">Whats Up?!</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_play">Play</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="pref_start_on_cmd">Start on Command Mode</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_tls_port">TLS Port</string>
    <string name="pref_partner_name">Partner Name</string>
    <string name="pref_time_gap">Time Gap (ms)</string>
    <string name="pref_echo_mode">Echo Mode</string>
    <string name="hint_type_message">Type a message</string>
    <string name="notification_channel_id">whatsup_channel</string>
    <string name="notification_channel_name">WhatsUp Messages</string>
    <string name="notification_new_message">New message received</string>
    <string name="cmd_settings">.settings</string>
    <string name="cmd_cmd">.cmd</string>
    <string name="cmd_clear">.clear</string>
    <string name="cmd_play">.play</string>
</resources>
